# amqpprox

.github/workflows/: main.yml
libamqpprox/: CMakeLists.txt  amqpprox_authinterceptinterface.cpp  amqpprox_authinterceptinterface.h  amqpprox_defaultauthintercept.cpp  amqpprox_defaultauthintercept.h  amqpprox_server.cpp  amqpprox_server.h  amqpprox_session.cpp  amqpprox_session.h
perf_tester/: Cargo.toml
perf_tester/src/: client.rs  main.rs  server.rs
tests/: CMakeLists.txt  amqpprox_defaultauthintercept.t.cpp  amqpprox_session.t.cpp
tests/performance_tester/src/: client.rs  main.rs  server.rs
