[package]
name = "amqpprox_perf_tester"
version = "0.1.0"
authors = ["Alaric <anightingale@bloomberg.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
amq-protocol = "4.2.2"
anyhow = "1.0"
structopt = "0.3"
amiquip = { version = "0.4", default-features = false }
env_logger = "0.8"
log = "0.4"
bytes = "1.0"
futures = "0.3"
